# glsl_example

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  index.html  params.json  stdafx.cpp  stdafx.h
CMake/: FindPkgMacros.cmake  compiler_option.cmake  pch_support.cmake
assets/shader/: basic_light.fs  basic_light.vs  diffuse_specular_map.vs  edge_detection.fs  emboss.fs  emboss.vs  environment_mapping.fs  environment_mapping.vs  gray_scale.fs  no_effect.fs  normal_mapping.fs  normal_mapping.vs  sepia.fs  shadow_map.fs  shadow_map.vs  simple_red.fs  simple_red.vs  toon.fs  toon.vs  uv_animation.fs  uv_animation.vs
haruna/: parametric_equations.h  parametric_surface.cpp  parametric_surface.h  primitive_mesh.cpp  primitive_mesh.h  vertex.h
haruna/gl/: buffer_object.cpp  buffer_object.h  frame_buffer.cpp  frame_buffer.h  gl_env.cpp  gl_env.h  shader.cpp  shader.h  texture.cpp  texture.h
haruna_exe/: color_conversion.cpp  color_conversion.h  color_shader.cpp  color_shader.h  diffuse_specular_mapping.cpp  diffuse_specular_mapping.h  edge_detection.cpp  edge_detection.h  environment_mapping.cpp  environment_mapping.h  lighting.cpp  lighting.h  main.cpp  main.h  normal_mapping.cpp  normal_mapping.h  renderer.cpp  renderer.h  shadow_mapping.cpp  shadow_mapping.h  texture_mapping.cpp  texture_mapping.h  toon_shader.cpp  toon_shader.h  uv_animation.cpp  uv_animation.h
lodepng/: lodepng.cpp
sora/: OVR_Types.h  arch.h  assert_inc.h  common_string.cpp  common_string.h  filesystem.cpp  filesystem.h  logger.cpp  logger.h  low_level_c_file.cpp  low_level_c_file.h  math_helper.cpp  math_helper.h  memory_file.cpp  memory_file.h  template_lib.h
